fix reelated projects overflowing

--- a/pages/professionals/projects/[...project].module.scss
+++ b/pages/professionals/projects/[...project].module.scss
@@ -1,12 +1,12 @@
 .intro{
   position: relative;
-  
   width: 100%;
   .wrap{
-    position: relative;
-    //min-height: calc(100vh - 4rem);
-    min-height: 60vh;
     display: flex;
+    position: relative;
+    min-height: calc(100vh - 4rem);
+    min-height: 60vh;
+    //max-width: spanNestedGrid(12, 6);
     
     .image{
       opacity: 0.2;
@@ -39,6 +39,7 @@
   padding-top: $small-margin;
   display: flex;
   flex-direction: row;
+  max-width: 100%;
   .gallery{
     flex: 1 1 auto;
   }
